--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Mikhail Dozmorov at 2022-09-13 09:36:08 -0400 
+%% Created for Mikhail Dozmorov at 2022-11-20 13:33:11 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{nordin2022cut,
+	author = {Nordin, Anna and Zambanini, Gianluca and Pagella, Pierfrancesco and Cantu, Claudio},
+	date-added = {2022-11-20 12:55:21 -0500},
+	date-modified = {2022-11-20 12:55:21 -0500},
+	journal = {bioRxiv},
+	publisher = {Cold Spring Harbor Laboratory},
+	title = {The CUT\&RUN Blacklist of Problematic Regions of the Genome},
+	year = {2022}}
 
 @unpublished{Klasfeld2022-nn,
 	abstract = {AbstractChromatin immunoprecipitation followed by sequencing
