--- a/README.Rmd
+++ b/README.Rmd
@@ -27,6 +27,7 @@ library(BiocStyle)
 
 Coordinates of problematic genomic regions that should be avoided when 
 working with genomic data. For human, mouse, and selected model organisms.
+Please, open an [issue](https://github.com/dozmorovlab/excluderanges/issues) to suggest other resources.
 Package on Bioconductor: `r BiocStyle::Biocpkg("excluderanges")`.
 
 <!-- badges: start
