--- a/README.Rmd
+++ b/README.Rmd
@@ -28,8 +28,7 @@ Ogata, Jonathan D, Wancen Mu, Eric S Davis, Bingjie Xue, J Chuck Harrell, Nathan
 <img id="excluderanges_logo_by_Mike_Love" src="man/figures/logo.png" align="right" width="125"/>
 
 Coordinates of problematic genomic regions that should be avoided when 
-working with genomic data [@Ogata:2023aa]. For human, mouse, and selected model organisms.
-Please, open an [issue](https://github.com/dozmorovlab/excluderanges/issues) to suggest other resources.
+working with genomic data. For human, mouse, and selected model organisms.
 Package on Bioconductor: `r BiocStyle::Biocpkg("excluderanges")`.
 
 <!-- badges: start
@@ -43,8 +42,8 @@ genome assemblies are available. Download all data from [Google Drive](https://d
 **TL;DR** - For human hg38 genome assembly, [Anshul](https://twitter.com/anshulkundaje/status/1263546023151992832?s=20) 
 and we recommend [ENCFF356LFX exclusion list regions](https://www.encodeproject.org/files/ENCFF356LFX/).
 Also available as `hg38.Kundaje.GRCh38_unified_Excludable` excluderanges object
-(AnnotationHub ID: AH107305)
-and [BEDbase.org](http://bedbase.org/#/bedsplash/1a561729234c2844303a051b16f66656).
+(AnnotationHub ID: AH95917)
+<!--and [BEDbase.org](http://bedbase.org/#/bedsplash/1a561729234c2844303a051b16f66656)-->.
 
 BED files of exclusion regions are available on the [ENCODE project](https://www.encodeproject.org/search/?searchTerm=exclusion+list)
 website and scattered across various websites, such as 
@@ -61,39 +60,21 @@ Naming convention: `<genome assembly>.<lab>.<original file name>`, e.g.,
 
 See [make-data.R](inst/scripts/make-data.R) how we created excluderanges objects.
 
-<!--
-# Installation instructions
-
-Get the latest stable `R` release from [CRAN](http://cran.r-project.org/). Then 
-install `r BiocStyle::Biocpkg('AnnotationHub')` from [Bioconductor](http://bioconductor.org/) 
-using the following code:
-
-```{r 'install', eval = TRUE, message=FALSE, warning=FALSE}
-if (!requireNamespace("BiocManager", quietly = TRUE)) {
-    install.packages("BiocManager")
-}
-BiocManager::install("AnnotationHub", update = FALSE) 
-# Additional packages
-BiocManager::install("GenomicRanges", update = FALSE)
-BiocManager::install("plyranges", update = FALSE)
-```
--->
-
 ## Installation instructions
 
 [Install](https://www.bioconductor.org/install/#install-R) the latest 
 release of R, then get the latest version of Bioconductor by starting R and 
 entering the commands:
 
-```{r 'install1', eval = TRUE, message=FALSE, warning=FALSE}
+```{r 'install1', eval = FALSE, message=FALSE, warning=FALSE}
 # if (!require("BiocManager", quietly = TRUE))
 #     install.packages("BiocManager")
-# BiocManager::install(version = "3.18")
+# BiocManager::install(version = "3.16")
 ```
 
 Then, install additional packages using the following code:
 
-```{r 'install2', eval = TRUE, message=FALSE, warning=FALSE}
+```{r 'install2', eval = FALSE, message=FALSE, warning=FALSE}
 # BiocManager::install("AnnotationHub", update = FALSE) 
 # BiocManager::install("GenomicRanges", update = FALSE)
 # BiocManager::install("plyranges", update = FALSE)
@@ -116,6 +97,7 @@ query_data
 `hg38.Kundaje.GRCh38_unified_Excludable` object recommended by Anshul
 
 ```{r hg38excluderanges}
+library(GenomeInfoDb)  # for keepStandardChromosomes()
 excludeGR.hg38.Kundaje.1 <- query_data[["AH107305"]]
 # Always a good idea to sort GRanges and keep standard chromosomes
 excludeGR.hg38.Kundaje.1 <- excludeGR.hg38.Kundaje.1 %>% 
@@ -366,7 +348,7 @@ print(length(excludeGR.hg38.all))
 summary(width(excludeGR.hg38.all))
 ```
 
-# BEDbase data download
+<!--# BEDbase data download
 
 [BEDbase.org](http://bedbase.org/) is a repository for storing and analyzing
 BED files and BED sets, developed by [Sheffield lab](https://databio.org/). 
@@ -387,6 +369,7 @@ wget http://bedbase.org/api/bed/1a561729234c2844303a051b16f66656/file/bed \
 See also the R code to download
 [T2T.excluderanges](https://gist.github.com/mdozmorov/7f4393f90932fb6bd911c43c20425ca0) 
 and [mm39.excluderanges](https://gist.github.com/mdozmorov/33a1fa3234b2942dae238e1fcb39c996).
+-->
 
 # Mitochondrial DNA sequences, NUMTs
 
@@ -407,6 +390,12 @@ These NUMT sets can be combined with exclusion sets.
 Example of the  `hg38.Lareau.hg38_peaks` object
 
 ```{r}
+query_data[grepl("mito", query_data$description, ignore.case = TRUE), ]
+hg38.Lareau.hg38_peaks <- query_data[["AH107343"]]
+```
+
+
+```{r eval=FALSE, echo=FALSE}
 suppressMessages(library(httr))
 # Get hg38.Lareau.hg38_peaks BEDbase ID
 bedbase_id <- "9fa55701a3bd3e7a598d1d2815e3390f"
@@ -480,18 +469,6 @@ gapsGR_hg38_centromere <- query_data[["AH107354"]]
 gapsGR_hg38_centromere
 ```
 
-## Gaps in mouse genome
-
-Note that Mouse chromosomes have centromeres close to one end and have essentially 
-no short arm. Although available, we do not recommend using them as they
-are essentially placeholders.
-
-```{r}
-query_data <- query(ah, c("excluderanges", "Mus musculus", "UCSC"))
-mm39.UCSC.centromere <- query_data[["AH107366"]]
-head(mm39.UCSC.centromere)
-```
-
 # CUT&RUN excludable sets
 
 Nordin et al. 2022 [@nordin2022cut] generated excludable regions for the CUT&RUN 
@@ -525,8 +502,8 @@ download.file("https://drive.google.com/uc?export=download&id=1orPXLWUZ4-C4n_Jt2
 
 ```{r echo=FALSE}
 mtx <- read.csv("man/figures/Table_S1.csv")
-mtx$BEDbase.URL <- ifelse(!is.na(mtx$BEDbase.ID), paste0("[link](http://bedbase.org/#/bedsplash/", mtx$BEDbase.ID, ")"), "NA")
-knitr::kable(mtx[, c("Name", "Ahub.IDs.BioC.3.16.and.above", "BEDbase.URL", "Description", "Filtered.Region.count")])
+# mtx$BEDbase.URL <- ifelse(!is.na(mtx$BEDbase.ID), paste0("[link](http://bedbase.org/#/bedsplash/", mtx$BEDbase.ID, ")"), "NA")
+knitr::kable(mtx[, c("Name", "Ahub.IDs.BioC.3.16.and.above", "Description", "Filtered.Region.count")]) # "BEDbase.URL", 
 ```
 
 # Citation
@@ -544,4 +521,11 @@ Please note that the `excluderanges` project is released with a [Contributor Cod
 
 This package was developed using `r BiocStyle::Biocpkg('biocthis')`.
 
+# Session information
+
+```{r}
+sessionInfo()
+```
+
 # References
+
